@@ -1,3 +1,7 @@
+Tue Jan  5 20:07:05 1999  Alexander Bergolth  <bergolth@ariel.wu-wien.ac.at>
+
+	* htdig/Retriever.cc: fixed bug in bad_querystring detection
+
 Sat Jan  2 16:39:34 1999  Alexander Bergolth  <leo@strike.wu-wien.ac.at>
 
 	* htdig/main.cc, htlib/Configuration.cc: Added warning message if
